<?xml version="1.0"?>
<package>
  <name>rosstep</name>
  <version>1.0.0</version>
  <description>Steps through custom YAML files to ensure that ROS applications execute correctly.</description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <license>Proprietary</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
